<resources>

    <string name="app_name">Nfc For Android</string>
    <string name="no_yet_implement">Not yet implemented</string>
    <string name="wating_tag">Waiting for tag...</string>
    <string name="reading_tag">Reading a tag...</string>
    <string name="writing_tag">Writing tag...</string>
    <string name="tag_write">Tag write ! </string>
    <string name="tag_not_write">Tag not write ! </string>
    <string name="type_tag_write">Type of tag to write </string>
    <string name="tag_content">Tag content :</string>
    <string name="hint_smartposter">SmartPoster title</string>
    <string name="text_content_1">Text record 1 :</string>
    <string name="text_content_2">Text record 2 :</string>
    <string name="hint_image">click on the image to load your custom image</string>
    <string name="android_application_record">include android application record</string>
    <!-- Types -->
    <string name="type_text">Type text content</string>
    <string name="type_uri">Enter uri adress</string>
    <!-- ABS items -->
    <string name="item_rescan">Scan new tag</string>
    <!-- Game -->
    <string name="skip_button">Skip initialisation, i have tags</string>
    <string name="next_button">Next</string>
    <string name="init_button">Init Tags</string>
    <string name="text_game">Welcome to litle game \nFirst of all you have to init 2 nfc tags before you play. This initialisation is mandatory for the rest of the game. Click on the button "Init Tags" to begin.</string>
    <string name="game_waiting_tag1">Waiting tag 1 ...</string>
    <string name="game_waiting_tag2">Waiting tag 2 ...</string>
    <string name="game_waiting_tag3">Waiting tag 3 ...</string>
    <string name="game_write_tag1">tag 1 write</string>
    <string name="game_write_tag2">tag 2 write</string>
    <string name="game_write_tag3">tag 3 write</string>
    <string name="find_animal">Find the animal corresponding to this sound. Drag the image to the grey rectangle</string>
    <string name="animal_found">Great !  you find the correct animal</string>
    <string name="animal_not_found">Sorry ! it wasn\'t this animal. Try to rescan the tag and listen again</string>
    <string name="animal_no_tag">You scan no tag.</string>
    

</resources>