<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dip"
    android:orientation="vertical" >
	<TextView
        android:id="@+id/text_content_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dip"        
        android:text="@string/text_game"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <Button
        android:id="@+id/btn_init"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/text_content_1"
        android:text="@string/init_button"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    <TextView
        android:id="@+id/msg_tag_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dip"
        android:layout_below="@+id/btn_init"
        android:text="@string/game_waiting_tag1"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <TextView
        android:id="@+id/msg_tag_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dip"
        android:layout_below="@+id/msg_tag_1"
        android:text="@string/game_waiting_tag2"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <TextView
        android:id="@+id/msg_tag_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dip"
        android:layout_below="@+id/msg_tag_2"
        android:text="@string/game_waiting_tag3"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <Button
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/msg_tag_3"
        android:layout_marginTop="15dip"
        android:text="@string/next_button"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    <Button
        android:id="@+id/btn_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:text="@string/skip_button"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>